<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/visa_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cartao_visa"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/master_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cartao_master"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/america_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cartao_america"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/elo_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cartao_elo"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/hipe_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cartao_hiper"/>
        </FrameLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>