<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Carteira.Novo.NovoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_home" />

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/bandeiraLayout_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin">

            <EditText
                android:id="@+id/bandeira_cartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:hint="@string/text_select" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nomeLayout_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bandeiraLayout_cartao">

            <EditText
                android:id="@+id/nome_cartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:textAllCaps="true"
                android:hint="@string/text_nome" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/numeroLayout_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nomeLayout_cartao">

            <EditText
                android:id="@+id/numero_cartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="23"
                android:hint="@string/text_numero" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/validadeLayout_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numeroLayout_cartao">

            <EditText
                android:id="@+id/validade_cartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="7"
                android:hint="@string/text_validade" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cvvLayout_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/validadeLayout_cartao">

            <EditText
                android:id="@+id/cvv_cartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="4"
                android:digits="0123456789"
                android:hint="@string/text_cvv" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cepLayout_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cvvLayout_cartao">

            <EditText
                android:id="@+id/cep_cartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"
                android:hint="@string/text_cep" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/segu_cartao"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cepLayout_cartao"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_segu"/>

        </LinearLayout>

        <Button
            android:id="@+id/salvar_cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_centerHorizontal="true"
            android:background="@drawable/botao_salvar"
            android:textColor="@color/branco_bar"
            android:text="@string/bot_salvar"
            android:layout_below="@+id/segu_cartao"/>

    </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
