<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Carteira.CarteiraFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_home" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/branco_bar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/carteira_cartao"
                    android:textStyle="bold"
                    android:textSize="@dimen/carteira_text"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/editar_cartao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:visibility="invisible"
                    android:text="@string/bot_carteira"
                    android:textColor="@color/colorAccent1"
                    style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/adicionar_cartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/ele_navi"
                app:cardBackgroundColor="@android:color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/lista_cartao"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cacheColorHint="@android:color/transparent"
                        android:clipToPadding="false"
                        android:divider="@null"
                        android:dividerHeight="0dp"
                        android:listSelector="@android:color/transparent"
                        android:scrollbarStyle="outsideOverlay"
                        android:scrollbars="vertical" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/largura_line"
                        android:layout_gravity="center"
                        android:background="@color/cinza_line"
                        android:focusable="false" />

                    <LinearLayout
                        android:background="?selectableItemBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/colorAccent1"
                            android:textStyle="bold"
                            android:text="@string/add_cartao"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_arrow"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>